@@ -1,3 +1,8 @@
+2006-06-14  lav
+
+	* keymapdf.cc: add putty codes.
+	* user.cc: support comment-line for java and sql.
+
 2006-05-15  lav
 
 	* history.cc, history.h: add clone ctor - this fixes a coredump
